project as of 12/13/20
project as of 12/13/20

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,125 @@ DS_Store
 *__init__.py*
 .idea
 .idea/*
+*.fnm
+*.fdm
+*.cfe
+*.cfs
+*.si
+*.fdt
+*.fdx
+*.nvd
+*.nvm
+*.tip
+*.tim
+*.pos
+*.tmd
+*.doc
+*.bak
+src/main/python/edu/arizona/cs/FacetExample.py
+src/main/python/edu/arizona/cs/query_engine_bkup.py
+src/main/resources/enwiki-20140602-pages-articles.xml-0005.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0006.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0007.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0009.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0013.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0014.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0016.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0017.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0018.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0020.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0021.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0022.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0025.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0026.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0032.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0033.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0034.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0035.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0039.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0040.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0042.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0043.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0048.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0049.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0051.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0052.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0053.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0054.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0057.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0058.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0062.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0067.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0087.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0088.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0093.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0095.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0098.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0099.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0100.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0103.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0115.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0123.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0124.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0125.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0128.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0129.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0130.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0131.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0132.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0136.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0146.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0151.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0153.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0174.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0185.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0203.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0215.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0216.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0226.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0268.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0348.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0363.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0540.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0555.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0567.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0593.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0597.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0689.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0714.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0766.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0806.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0813.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0833.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0841.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0856.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0964.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-0985.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-1069.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-1129.txt
+src/main/resources/enwiki-20140602-pages-articles.xml-1259.txt
+*.lock
+src/main/resources/QueryEngine.Index.EnglishAnalyzer_Spacy/segments_5
+src/main/resources/QueryEngine.Index.EnglishAnalyzer/segments_1
+src/main/resources/wiki_spacy_lemma_pos.json
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-5.4.3.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw3_q1.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/test_hw3_q1.py
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-5.4.3.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw3_q1.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/test_hw3_q1.py
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-5.4.3.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/__pycache__/test_hw3_q1.cpython-38-pytest-6.0.1.pyc
+src/test/python/edu/arizona/cs/test_hw3_q1.py
+src/main/resources/QueryEngine.Index/segments_1
+src/test/python/edu/arizona/cs/__pycache__/test_hw2_q7.cpython-38-pytest-5.4.3.pyc
+*.pyc
+src/main/resources/input.txt
+src/main/python/edu/arizona/cs/query_engine_spacy.py
+src/main/python/edu/arizona/cs/document.py
+src/main/python/edu/arizona/cs/__pycache__/document.cpython-38.pyc
+src/main/python/edu/arizona/cs/query_engine_spacy.py
+src/main/python/edu/arizona/cs/query_engine_spacy.py
